# elba

./: .gitignore  Makefile  README.md  cabal.project
agents/: Agents.hs  Docs.hs  Env.hs  Interpret.hs  LLM.hs  Log.hs  SystemPrompt.md  TH.hs  agents.cabal  prompt.txt
agents/test/: TestAgent.hs
eval/: README.md  benchmark.py  bridge.py  check_injections.py  config.py  execute.py  experiment.py  haskell_agent.py  llm-bedrock-claude  pricing.json  process.py  pyproject.toml  result.py  run.py  run_eval.py  runner.py  stub_agent.py
eval/camel-eval/: README.md  camel_worker.py  nopolicy-runner.sh  orchestrator.py  our-changes.patch  setup.sh
eval/camel_eval/: README.md  __init__.py  bedrock.py  camel.diff  worker.py
eval/configs/: gpt-5.4-high.json  gpt4o.json  gpt5.4-high.json  gpt5.4-medium.json  nova-pro.json  o4mini-high.json  o4mini-medium.json  opus-4.7-high.json  opus-4.8-high.json  opus-4.8-max.json  opus-4.8-xhigh.json  opus4.7-high.json  sonnet-5-high.json
eval/data/: README.md  model_versions.txt
eval/data/adversarial/results/: adversarial_slack.tex  confidence_intervals.tex  dump.jsonl
eval/data/main/camel-nopolicy-gpt-5.4-high/slack/user_task_0/direct/: injection_task_1.json  injection_task_2.json  injection_task_4.json
eval/data/main/camel-nopolicy-gpt-5.4-high/slack/user_task_0/important_instructions/: injection_task_4.json  injection_task_5.json
eval/data/main/camel-nopolicy-gpt-5.4-high/slack/user_task_0/tool_knowledge/: injection_task_1.json  injection_task_3.json  injection_task_4.json
eval/data/main/camel-nopolicy-gpt-5.4-high/slack/user_task_1/direct/: injection_task_1.json  injection_task_3.json  injection_task_4.json  injection_task_5.json
eval/data/main/camel-nopolicy-gpt-5.4-high/slack/user_task_1/important_instructions/: injection_task_2.json  injection_task_3.json  injection_task_4.json
eval/data/main/camel-nopolicy-gpt-5.4-high/slack/user_task_1/none/: none.json
eval/data/main/camel-nopolicy-gpt-5.4-high/slack/user_task_1/tool_knowledge/: injection_task_4.json
eval/data/main/camel-nopolicy-gpt-5.4-high/slack/user_task_10/direct/: injection_task_1.json
eval/data/main/camel-nopolicy-gpt-5.4-high/slack/user_task_10/important_instructions/: injection_task_1.json  injection_task_3.json  injection_task_5.json
eval/data/main/camel-nopolicy-gpt-5.4-high/slack/user_task_10/tool_knowledge/: injection_task_2.json  injection_task_3.json  injection_task_5.json
eval/data/main/camel-nopolicy-gpt-5.4-high/slack/user_task_12/direct/: injection_task_1.json  injection_task_2.json  injection_task_3.json  injection_task_4.json
eval/data/main/camel-nopolicy-gpt-5.4-high/slack/user_task_12/important_instructions/: injection_task_1.json  injection_task_2.json  injection_task_5.json
eval/data/main/camel-nopolicy-gpt-5.4-high/slack/user_task_12/tool_knowledge/: injection_task_2.json  injection_task_4.json
eval/data/main/camel-nopolicy-gpt-5.4-high/slack/user_task_13/direct/: injection_task_3.json  injection_task_4.json  injection_task_5.json
eval/data/main/camel-nopolicy-gpt-5.4-high/slack/user_task_13/important_instructions/: injection_task_4.json  injection_task_5.json
eval/data/main/camel-nopolicy-gpt-5.4-high/slack/user_task_13/none/: none.json
eval/data/main/camel-nopolicy-gpt-5.4-high/slack/user_task_13/tool_knowledge/: injection_task_1.json  injection_task_5.json
eval/data/main/camel-nopolicy-gpt-5.4-high/slack/user_task_14/direct/: injection_task_3.json  injection_task_4.json  injection_task_5.json
eval/data/main/camel-nopolicy-gpt-5.4-high/slack/user_task_14/important_instructions/: injection_task_1.json  injection_task_3.json  injection_task_5.json
eval/data/main/results/: confidence_intervals.tex  dump.jsonl  security_slack.tex  utility_slack.tex
eval/llm-bedrock-extra/: llm_bedrock_extra.py  pyproject.toml
eval/llm-bedrock-extra/llm_bedrock_extra.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
eval/tests/: test_eval.py
examples/: Server.hs  buyAgent.hs  examples.cabal  filesAgent.hs
examples/bibtex/: bibtex.cabal
examples/bibtex/lib/: LitSearch.hs
examples/files/: FilesAgent.hs  files.cabal
examples/files/test/: TestRIO.hs
examples/ifc/: EnvTest.hs  IfcGuidance.md  Main.hs  MainSecure.hs  ifc.cabal
examples/ifc/agentdojo/: AgentDojoTypes.hs  IfcGuidance.md
examples/ifc/agentdojo/app/: Main.hs
examples/ifc/agentdojo/banking/: Banking.hs  BankingTCB.hs
examples/ifc/agentdojo/banking/app/: Main.hs  MainSecure.hs
examples/ifc/agentdojo/slack/: Slack.hs  SlackLabelTCB.hs  SlackPrincipal.hs  SlackTCB.hs  Web.hs  WebTCB.hs
examples/ifc/agentdojo/slack/app/: Main.hs  MainSecure.hs
examples/ifc/agentdojo/tests/: README.md  Reference.hs  SecureReference.hs  run_tests.py  test_opacity.sh
examples/ifc/agentdojo/travel/: Travel.hs  TravelTCB.hs
examples/ifc/agentdojo/travel/app/: Main.hs  MainSecure.hs
examples/ifc/agentdojo/workspace/: Workspace.hs  WorkspaceTCB.hs
examples/ifc/agentdojo/workspace/app/: Main.hs  MainSecure.hs
examples/ifc/banking/: Banking.hs  BankingTCB.hs
examples/ifc/banking/app/: Main.hs  MainSecure.hs
examples/ifc/configs/: gpt5.4-high.json  o4mini-high.json  o4mini.json
examples/ifc/lib/: AgentApp.hs  Bridge.hs  IFC.hs  IFCInternal.hs  IfcTCB.hs  InsecureApp.hs  Policy.hs  Slack.hs  SlackSecure.hs  SlackTCB.hs  ToLabeled.hs  Web.hs  WebSecure.hs  WebTCB.hs
examples/ifc/python/: haskell_agent.py  pyproject.toml  run_eval.py  test_bridge_stub.sh
examples/ifc/shared/: AgentDojoTypes.hs  InsecureApp.hs  Tool.hs
examples/ifc/slack/: Slack.hs  SlackLabelTCB.hs  SlackTCB.hs  WebTCB.hs
examples/ifc/slack/app/: Main.hs  MainSecure.hs
examples/ifc/tests/: Reference.hs  SecureReference.hs  Tests.hs  run_tests.py
examples/ifc/travel/: Travel.hs  TravelTCB.hs
examples/ifc/travel/app/: Main.hs  MainSecure.hs
examples/ifc/workspace/: Workspace.hs  WorkspaceTCB.hs
examples/ifc/workspace/app/: Main.hs  MainSecure.hs
examples/linear/: BuyAgent.hs  linear.cabal
examples/linear/lib/: Server.hs
files/: RIO.hs  files.cabal
(+19791 files in other folders)
