[project]
name = "typed-agents-eval"
version = "0.2.0"
description = "AgentDojo evaluation harness for typed agents and the CaMeL baseline"
requires-python = ">=3.11"
dependencies = [
    "agentdojo>=0.1.35",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["experiment", "bridge", "runner", "process"]

[tool.pytest.ini_options]
testpaths = ["tests"]
