cabal-version: 3.0
name:          bibtex
version:       0.1.0.0
synopsis:      DBLP-backed literature search sandbox
license:       MIT
build-type:    Simple

library
  exposed-modules:  LitSearch
  hs-source-dirs:   lib
  default-language: GHC2024
  build-depends:
    base >= 4.20 && < 5,
    aeson,
    bytestring,
    process,
    text
