cabal-version: 3.0
name:          ifc
version:       0.1.0.0
synopsis:      Language based agent control with IFC, and AgentDojo bindings
license:       MIT
build-type:    Simple

extra-source-files:
  agentdojo/IfcGuidance.md

common suite-app
  default-language: GHC2024
  build-depends:
    agents,
    base >= 4.20 && < 5,
    ifc,
    template-haskell

library
  exposed-modules:
    -- general IFC library and bridge
    AgentApp
    Bridge
    IFC
    Policy
    -- AgentDojo suite bindings
    AgentDojoTypes
    Banking
    BankingTCB
    Slack
    SlackLabelTCB
    SlackPrincipal
    SlackTCB
    Travel
    TravelTCB
    Web
    WebTCB
    Workspace
    WorkspaceTCB

  hs-source-dirs:
    lib
    agentdojo
    agentdojo/slack
    agentdojo/workspace
    agentdojo/travel
    agentdojo/banking
  default-language: GHC2024
  ghc-options:      -haddock
  build-depends:
    aeson,
    agents,
    base >= 4.20 && < 5,
    bytestring,
    containers,
    lio,
    template-haskell,
    text

executable agentdojo-slack
  import:           suite-app
  main-is:          Main.hs
  hs-source-dirs:   agentdojo/slack/app

executable agentdojo-slack-secure
  import:           suite-app
  main-is:          MainSecure.hs
  hs-source-dirs:   agentdojo/slack/app
  build-depends:    filepath

executable agentdojo-workspace
  import:           suite-app
  main-is:          Main.hs
  hs-source-dirs:   agentdojo/workspace/app

executable agentdojo-workspace-secure
  import:           suite-app
  main-is:          MainSecure.hs
  hs-source-dirs:   agentdojo/workspace/app

executable agentdojo-travel
  import:           suite-app
  main-is:          Main.hs
  hs-source-dirs:   agentdojo/travel/app

executable agentdojo-travel-secure
  import:           suite-app
  main-is:          MainSecure.hs
  hs-source-dirs:   agentdojo/travel/app

executable agentdojo-banking
  import:           suite-app
  main-is:          Main.hs
  hs-source-dirs:   agentdojo/banking/app

executable agentdojo-banking-secure
  import:           suite-app
  main-is:          MainSecure.hs
  hs-source-dirs:   agentdojo/banking/app

executable agentdojo-slack-reference
  main-is:          Reference.hs
  hs-source-dirs:   agentdojo/tests
  default-language: GHC2024
  build-depends:
    base >= 4.20 && < 5,
    ifc

executable agentdojo-slack-secure-reference
  main-is:          SecureReference.hs
  hs-source-dirs:   agentdojo/tests
  default-language: GHC2024
  build-depends:
    base >= 4.20 && < 5,
    ifc,
    lio
