cabal-version: 3.0
name:          ifc
version:       0.1.0.0
synopsis:      Language based agent control with IFC, and AgentDojo bindings
license:       MIT
build-type:    Simple

extra-source-files:
  agentdojo/IfcGuidance.md

library
  exposed-modules:
    -- general IFC library and bridge
    Bridge
    IFC
    Policy
    -- AgentDojo suite bindings
    Banking
    BankingTCB
    Slack
    SlackLabelTCB
    SlackPrincipal
    SlackTCB
    Travel
    TravelTCB
    Web
    WebTCB
    Workspace
    WorkspaceTCB

  hs-source-dirs:
    lib
    agentdojo
    agentdojo/slack
    agentdojo/workspace
    agentdojo/travel
    agentdojo/banking
  default-language: GHC2024
  ghc-options:      -haddock
  build-depends:
    aeson,
    agents,
    base >= 4.20 && < 5,
    bytestring,
    containers,
    lio,
    text

executable agentdojo
  main-is:          Main.hs
  hs-source-dirs:   agentdojo/app
  default-language: GHC2024
  build-depends:
    aeson,
    agents,
    base >= 4.20 && < 5,
    bytestring,
    filepath,
    ifc,
    template-haskell

executable agentdojo-slack-reference
  main-is:          Reference.hs
  hs-source-dirs:   agentdojo/tests
  default-language: GHC2024
  build-depends:
    base >= 4.20 && < 5,
    ifc

executable agentdojo-slack-secure-reference
  main-is:          SecureReference.hs
  hs-source-dirs:   agentdojo/tests
  default-language: GHC2024
  build-depends:
    base >= 4.20 && < 5,
    ifc
